--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Amount_Greather_Than_0" xml:space="preserve">
+    <value>The amount must be greather than 0</value>
+  </data>
+  <data name="Expenses_Not_In_Future" xml:space="preserve">
+    <value>Expenses cannot be in the future</value>
+  </data>
+  <data name="Payment_Invalid" xml:space="preserve">
+    <value>Payment Type is not valid</value>
+  </data>
+  <data name="Title_Required" xml:space="preserve">
+    <value>The title is required</value>
+  </data>
   <data name="Unknow_Error" xml:space="preserve">
     <value>Unknow error</value>
   </data>
