--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
@@ -118,18 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Amount_Greather_Than_0" xml:space="preserve">
-    <value>The amount must be greather than 0</value>
+    <value>O total deve ser maior que 0</value>
   </data>
   <data name="Expenses_Not_In_Future" xml:space="preserve">
-    <value>Expenses cannot be in the future</value>
+    <value>Despesas não podem ser no futuro</value>
   </data>
   <data name="Payment_Invalid" xml:space="preserve">
-    <value>Payment Type is not valid</value>
+    <value>Tipo de pagamento inválido</value>
   </data>
   <data name="Title_Required" xml:space="preserve">
-    <value>The title is required</value>
+    <value>O título é obrigatório</value>
   </data>
   <data name="Unknow_Error" xml:space="preserve">
-    <value>Unknow error</value>
+    <value>Erro desconhecido</value>
   </data>
 </root>
