--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -135,4 +135,7 @@
   <data name="Unknow_Error" xml:space="preserve">
     <value>Unknow error</value>
   </data>
+  <data name="Email_Not_Empty" xml:space="preserve">
+    <value>The email is required</value>
+  </data>
 </root>
