--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
@@ -156,4 +156,7 @@
   <data name="Different_Password" xml:space="preserve">
     <value>A senha tem que ser igual a senha atual</value>
   </data>
+  <data name="Tag_Invalid" xml:space="preserve">
+    <value>Esse tipo de tag é inválido</value>
+  </data>
 </root>
