--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -157,4 +157,7 @@
   <data name="Different_Password" xml:space="preserve">
     <value>The password must be equal of the actual password</value>
   </data>
+  <data name="Tag_Invalid" xml:space="preserve">
+    <value>This tag type is invalid</value>
+  </data>
 </root>
